[gd_scene load_steps=9 format=3 uid="uid://6dg7bxwjo1du"]

[ext_resource type="Script" uid="uid://bdrq8sn7xyxmr" path="res://menu/options.gd" id="1_vrwnq"]
[ext_resource type="Texture2D" uid="uid://jd5x051tk8nc" path="res://recursos/graficos/ikurosofttrans.png" id="2_lu4uf"]
[ext_resource type="PackedScene" uid="uid://c1lmerbku64rs" path="res://recursos/graficos/menu/base/base_label.tscn" id="2_mqi07"]
[ext_resource type="PackedScene" uid="uid://b44h80jjvjjen" path="res://recursos/graficos/menu/base/base_panel.tscn" id="3_vhbmr"]
[ext_resource type="Texture2D" uid="uid://1ucyo3mb6t6x" path="res://recursos/graficos/menu/switch_tuto.png" id="7_ilxmy"]
[ext_resource type="PackedScene" uid="uid://u5hvva40qljd" path="res://recursos/graficos/menu/base/button.tscn" id="7_oiomh"]
[ext_resource type="PackedScene" uid="uid://7jxf3smhtulo" path="res://recursos/graficos/menu/base/label.tscn" id="8_5f8vx"]
[ext_resource type="AudioStream" uid="uid://bgyhq8is25n7p" path="res://recursos/sonido/tema.mp3" id="8_vbf1p"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vrwnq")
metadata/_edit_use_anchors_ = true

[node name="FondoMenu" type="Sprite2D" parent="."]
position = Vector2(878, 108)
scale = Vector2(0.071, 0.065)
texture = ExtResource("2_lu4uf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180392, 0.180392, 0.180392, 0)

[node name="Label" parent="." instance=ExtResource("2_mqi07")]
layout_mode = 1
anchors_preset = 5
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = -142.0
offset_top = 17.0
offset_right = 129.0
offset_bottom = 162.0
grow_vertical = 1
text = "OPCIONES"

[node name="panel_sounds" parent="." instance=ExtResource("3_vhbmr")]
layout_mode = 1
offset_left = -405.0
offset_top = -76.0
offset_right = 162.0
offset_bottom = 439.0
scale = Vector2(0.6, 0.6)

[node name="general" parent="panel_sounds" instance=ExtResource("2_mqi07")]
layout_mode = 1
offset_left = -125.5
offset_top = -233.5
offset_right = 145.5
offset_bottom = -122.5
theme_override_font_sizes/font_size = 20
text = "audio general"

[node name="general2" type="HSlider" parent="panel_sounds/general"]
layout_mode = 0
offset_left = -8.0
offset_top = 91.0
offset_right = 260.0
offset_bottom = 107.0

[node name="musica" parent="panel_sounds" instance=ExtResource("2_mqi07")]
layout_mode = 1
offset_left = -134.5
offset_top = -81.5
offset_right = 136.5
offset_bottom = 8.5
theme_override_font_sizes/font_size = 20
text = "musica"

[node name="musica" type="HSlider" parent="panel_sounds/musica"]
layout_mode = 0
offset_left = 1.00001
offset_top = 75.6667
offset_right = 272.0
offset_bottom = 91.6667

[node name="efectos" parent="panel_sounds" instance=ExtResource("2_mqi07")]
layout_mode = 1
offset_left = -145.167
offset_top = 28.3333
offset_right = 125.833
offset_bottom = 173.333
theme_override_font_sizes/font_size = 20
text = "efectos"

[node name="efectos" type="HSlider" parent="panel_sounds/efectos"]
layout_mode = 0
offset_left = 13.0
offset_top = 106.0
offset_right = 283.0
offset_bottom = 122.0

[node name="panel_game" parent="." instance=ExtResource("3_vhbmr")]
layout_mode = 1
offset_left = -31.0
offset_top = -84.0
offset_right = 727.0
offset_bottom = 439.0
scale = Vector2(0.6, 0.6)

[node name="pantalla" parent="panel_game" instance=ExtResource("2_mqi07")]
layout_mode = 1
anchors_preset = 5
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = -137.333
offset_top = 15.0
offset_right = 133.667
offset_bottom = 126.0
grow_vertical = 1
theme_override_font_sizes/font_size = 20
text = "pantalla"

[node name="HBoxContainer" type="HBoxContainer" parent="panel_game/pantalla"]
layout_mode = 0
offset_left = -158.333
offset_top = 83.3333
offset_right = 433.667
offset_bottom = 151.333
theme_override_constants/separation = 100

[node name="btn_completa2" parent="panel_game/pantalla/HBoxContainer" instance=ExtResource("7_oiomh")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = null
texture_pressed = null
texture_hover = null
script = null

[node name="label" parent="panel_game/pantalla/HBoxContainer/btn_completa2" instance=ExtResource("8_5f8vx")]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.232
anchor_top = 0.0
anchor_right = 1.134
anchor_bottom = 1.096
offset_left = 105.072
offset_top = 11.3334
offset_right = -80.9643
offset_bottom = -20.1946
grow_horizontal = 1
grow_vertical = 1
text = "completa"

[node name="btn_ventana2" parent="panel_game/pantalla/HBoxContainer" instance=ExtResource("7_oiomh")]
layout_mode = 2
texture_normal = null
texture_pressed = null
texture_hover = null
script = null

[node name="label" parent="panel_game/pantalla/HBoxContainer/btn_ventana2" instance=ExtResource("8_5f8vx")]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.232
anchor_top = 0.0
anchor_right = 1.134
anchor_bottom = 1.096
offset_left = 228.333
offset_top = 11.6667
offset_right = 354.333
offset_bottom = -25.7653
grow_horizontal = 1
grow_vertical = 1
text = "ventana"

[node name="dificultad" parent="panel_game" instance=ExtResource("2_mqi07")]
layout_mode = 1
offset_left = -115.667
offset_top = -94.8333
offset_right = 121.333
offset_bottom = -4.83331
theme_override_font_sizes/font_size = 20
text = "dificultad"

[node name="HBoxContainer" type="HBoxContainer" parent="panel_game/dificultad"]
layout_mode = 0
offset_left = -171.667
offset_top = 85.0
offset_right = 646.333
offset_bottom = 161.0
scale = Vector2(0.7, 0.7)
theme_override_constants/separation = 40

[node name="facil2" parent="panel_game/dificultad/HBoxContainer" instance=ExtResource("7_oiomh")]
layout_mode = 2
texture_normal = null
texture_pressed = null
texture_hover = null
stretch_mode = 0
script = null

[node name="label" parent="panel_game/dificultad/HBoxContainer/facil2" instance=ExtResource("8_5f8vx")]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.232
anchor_top = 0.0
anchor_right = 1.134
anchor_bottom = 1.096
offset_left = 145.239
offset_top = -4.76196
offset_right = 223.239
offset_bottom = -36.29
grow_horizontal = 1
grow_vertical = 1
theme_override_colors/font_color = Color(0.121893, 0.653399, 0.0416293, 1)
theme_override_colors/font_shadow_color = Color(0, 0.121569, 0, 1)
text = "facil"

[node name="normal2" parent="panel_game/dificultad/HBoxContainer" instance=ExtResource("7_oiomh")]
layout_mode = 2
texture_normal = null
texture_pressed = null
texture_hover = null
script = null

[node name="label" parent="panel_game/dificultad/HBoxContainer/normal2" instance=ExtResource("8_5f8vx")]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.232
anchor_top = 0.0
anchor_right = 1.134
anchor_bottom = 1.096
offset_left = 298.096
offset_top = -2.381
offset_right = 406.096
offset_bottom = -36.909
grow_horizontal = 1
grow_vertical = 1
theme_override_colors/font_color = Color(0.937255, 0.470588, 0.113725, 1)
theme_override_colors/font_shadow_color = Color(0, 0.0901961, 0, 1)
theme_override_colors/font_outline_color = Color(0.0104431, 0.022281, 0.0058853, 1)
text = "normal"

[node name="dificil2" parent="panel_game/dificultad/HBoxContainer" instance=ExtResource("7_oiomh")]
layout_mode = 2
texture_normal = null
texture_pressed = null
texture_hover = null
script = null

[node name="label" parent="panel_game/dificultad/HBoxContainer/dificil2" instance=ExtResource("8_5f8vx")]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.232
anchor_top = 0.0
anchor_right = 1.134
anchor_bottom = 1.096
offset_left = 500.953
offset_top = -4.95911e-05
offset_right = 590.953
offset_bottom = -29.528
grow_horizontal = 1
grow_vertical = 1
theme_override_colors/font_color = Color(0.913725, 0.113725, 0.113725, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0.0784314, 1)
text = "dificil"

[node name="tutorial" parent="panel_game" instance=ExtResource("2_mqi07")]
layout_mode = 1
offset_left = -295.667
offset_top = 50.1667
offset_right = -101.667
offset_bottom = 114.167
theme_override_font_sizes/font_size = 20
text = "tutorial"

[node name="switch_tuto" type="TextureButton" parent="panel_game/tutorial"]
layout_mode = 0
offset_left = 22.0
offset_top = 55.0
offset_right = 95.0
offset_bottom = 88.0
scale = Vector2(2, 2)
toggle_mode = true
texture_normal = ExtResource("7_ilxmy")

[node name="text_tutorial" parent="panel_game/tutorial" instance=ExtResource("2_mqi07")]
layout_mode = 1
offset_left = -66.0
offset_top = 40.0
offset_right = 60.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 11
text = "quiero tutorial"
horizontal_alignment = 3

[node name="btn_atras2" parent="." instance=ExtResource("7_oiomh")]
layout_mode = 1
offset_left = -388.0
offset_top = 118.0
offset_right = -142.0
offset_bottom = 186.0
texture_normal = null
texture_pressed = null
texture_hover = null
script = null

[node name="label" parent="btn_atras2" instance=ExtResource("8_5f8vx")]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.232
anchor_top = 0.0
anchor_right = 1.134
anchor_bottom = 1.096
offset_left = 112.072
offset_top = 12.0
offset_right = -79.964
offset_bottom = -26.528
grow_horizontal = 1
grow_vertical = 1
text = "CANCELAR"

[node name="btn_aceptar" parent="." instance=ExtResource("7_oiomh")]
layout_mode = 1
offset_left = 139.0
offset_top = 118.0
offset_right = 385.0
offset_bottom = 186.0
texture_normal = null
texture_pressed = null
texture_hover = null
script = null

[node name="label" parent="btn_aceptar" instance=ExtResource("8_5f8vx")]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.232
anchor_top = 0.0
anchor_right = 1.134
anchor_bottom = 1.096
offset_left = 121.072
offset_top = 14.0
offset_right = -88.964
offset_bottom = -17.528
grow_horizontal = 1
grow_vertical = 1
text = "ACEPTAR"

[node name="option" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_vbf1p")

[connection signal="pressed" from="panel_game/pantalla/HBoxContainer/btn_completa2" to="." method="_on_btn_completa_2_pressed"]
[connection signal="pressed" from="panel_game/pantalla/HBoxContainer/btn_ventana2" to="." method="_on_btn_ventana_2_pressed"]
[connection signal="pressed" from="panel_game/dificultad/HBoxContainer/facil2" to="." method="_on_facil_2_pressed"]
[connection signal="pressed" from="panel_game/dificultad/HBoxContainer/normal2" to="." method="_on_normal_2_pressed"]
[connection signal="pressed" from="panel_game/dificultad/HBoxContainer/dificil2" to="." method="_on_dificil_2_pressed"]
[connection signal="pressed" from="panel_game/tutorial/switch_tuto" to="." method="_on_switch_tuto_pressed"]
[connection signal="pressed" from="btn_atras2" to="." method="_on_btn_atras_2_pressed"]
[connection signal="pressed" from="btn_aceptar" to="." method="_on_btn_aceptar_pressed"]
